# kubernetes-minecraft-operator

./: .gitattributes  .gitignore  Cargo.toml  Dockerfile  Makefile  PROJECT  README.md  backup-agent.Dockerfile  go.mod  go.sum  main.go  operator.Dockerfile
.github/workflows/: build-and-push-backup-agent.yaml  build-and-push-operator.yaml  build-and-push.yaml  codeql-analysis.yml  deploy-image.yaml  release-on-tag.yaml  test-and-lint.yaml
api/: Cargo.toml
api/src/: lib.rs
api/v1alpha1/: groupversion_info.go  minecraftbackup.go  minecraftserver.go  minecraftserver_types.go  zz_generated.deepcopy.go
backup-agent/: main.go
builder/: Cargo.toml
builder/src/: main.rs
cmd/backup-agent/: main.go
cmd/operator/: main.go
config/crd/: kustomization.yaml
config/crd/bases/: minecraft.jameslaverack.com_minecraftservers.yaml
config/crd/patches/: cainjection_in_minecraftservers.yaml  (+1 more)
config/default/: kustomization.yaml
config/manager/: controller_manager_config.yaml  manager.yaml
config/rbac/: minecraftserver_editor_role.yaml  minecraftserver_viewer_role.yaml  role.yaml
config/samples/: minecraft_v1alpha1_minecraftserver.yaml
controller/: backup_controller.go  controller.go  controller_test.go
controllers/: minecraftserver_controller.go  minecraftserver_controller_test.go  suite_test.go
crd/: minecraft.jameslaverack.com_minecraftbackups.yaml  minecraft.jameslaverack.com_minecraftservers.yaml
crdgen/: Cargo.toml
crdgen/src/: main.rs
deploy/: deployment.yaml  rbac.yaml
deploy/crd/: minecraft.jameslaverack.com_minecraftservers.yaml
deploy/operator/: deployment.yaml  metrics.yaml  namespace.yaml
examples/: vanilla.yaml
hack/: generate-with-local-tools.sh  install-local-tools.sh  test-with-local-tools.sh
internal/reconcile/: config_map.go  pod.go  service.go  util.go
minecraft_version_api/: Cargo.toml
minecraft_version_api/resources/test/: 1.19.3.json  19w35a.json  22w19a.json
minecraft_version_api/src/: client.rs  lib.rs  manifest.rs  test_util.rs
minecraft_version_api/tests/: integration_test.rs
operator/: Cargo.toml
operator/src/: main.rs
pkg/bibliothek/: bibliothek.go
pkg/logutil/: logutil.go
pkg/propertiesfile/: propertiesfile.go
pkg/reconcile/: backup_job.go  backup_pod.go  backup_service_account.go  config_map.go  dynmap_config_map.go  dynmap_service.go  pod.go  pod_monitor.go  rcon_service.go  replica_set.go  service.go  util.go
pkg/vanillatweaks/: vanillatweaks.go  vanillatweaks_test.go
pkg/version/: version.go  version_test.go
(+15 files in other folders)
