[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
k8s-openapi = { version = "0.16.0", features = ["v1_24"], default-features = false }
schemars = { version = "0.8.11", features = ["chrono"] }
serde = { version = "1.0.148", features = ["derive"] }
serde_json = "1.0.89"
serde_yaml = "0.9.14"

[dependencies.kube]
features = ["runtime", "client", "derive"]
version = "0.76.0"
