[package]
name = "builder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
api = { path = "../api" }
minecraft_version_api = { path = "../minecraft_version_api" }
tokio = { version = "1.23.0", features = ["macros", "rt-multi-thread"] }
futures = "0.3"
log = "0.4"
pretty_env_logger = "0.3"
reqwest = { version = "0.11.13", features = [ "json" ] }

[dependencies.kube]
features = ["runtime", "client", "derive"]
version = "0.76.0"
