[package]
name = "minecraft_version_api"
version = "0.1.0"
edition = "2021"

[dependencies]
url = { version = "2.3.1", features = ["serde"] }
chrono = { version = "0.4.23", features = ["serde"] }
serde = { version = "1.0.148", features = ["derive"] }
serde_json = "1.0.89"

[dev-dependencies]
tokio = { version = "1.23.0", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.11.13", features = [ "json" ] }
anyhow = "1.0.68"

