[package]
name = "operator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
tokio = { version = "1.23.0", features = ["macros", "rt-multi-thread"] }
api = { path = "../api" }

[dependencies.kube]
features = ["runtime", "client", "derive"]
version = "0.76.0"
